dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_1467685783.log
== SUBMISSION (2025-08-30 21:16:04)
-- CODE: 
numeros de amigos = 20 
cada amigo = 35
prin(numeros de amigos * cada amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    numeros de amigos = 20 
            ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    numeros de amigos = 20 
            ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:52:28)
-- CODE: 
numerosdeamigos = 20
custoporamaigos = 35
valortatal = numerosdeamigos * valorporamigo
prin(numerosdeamigos * custoporamaigos) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valortatal = numerosdeamigos * valorporamigo
                                   ^^^^^^^^^^^^^
NameError: name 'valorporamigo' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valortatal = numerosdeamigos * valorporamigo
                                   ^^^^^^^^^^^^^
NameError: name 'valorporamigo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:44:42)
-- CODE: 
numerosdeamigos = 20
custoporamaigos = 35
prin(numerosdeamigos * custoporamaigos)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 22:07:45)
-- CODE: 
amigos = 20
valor_por_amigos = 35

print(amigos * valor_por_amigos)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 22:03:15)
-- CODE: 
amigos = 20
valor_por_amigos = 35
total = amigos * valor_por_amigo
print(amigos * valor_por_amigos)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = amigos * valor_por_amigo
                     ^^^^^^^^^^^^^^^
NameError: name 'valor_por_amigo' is not defined. Did you mean: 'valor_por_amigos'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = amigos * valor_por_amigo
                     ^^^^^^^^^^^^^^^
NameError: name 'valor_por_amigo' is not defined. Did you mean: 'valor_por_amigos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:12:35)
-- CODE: 
amigos = 20
amigo = 35
prin(amigos * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:35:02)
-- CODE: 
numerosdeamigos = 20
custopormaigos  = 35
prin(numerosdeamigos * custoporamaigos)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:11:29)
-- CODE: 
amigos = 20
amigo = 35
prin( amigos * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 21:54:29)
-- CODE: 
numerosdeamigos = 20
custoporamaigos = 35
prin(numerosdeamigos * custoporamaigos) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos) 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos) 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:24:55)
-- CODE: 
x = 20
y = 35
prin(x * y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(x * y)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(x * y)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:11:28)
-- CODE: 
amigos = 20
amigo = 35
prin( amigos * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:12:28)
-- CODE: 
amigos = 20
amigo = 35
prin(amigos * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(amigos * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 21:20:36)
-- CODE: 
numeros de amigos = 20 
cada amigo = 35
prin(numeros de amigos * cada amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    numeros de amigos = 20 
            ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    numeros de amigos = 20 
            ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 22:03:31)
-- CODE: 
amigos = 20
valor_por_amigos = 35

print(amigos * valor_por_amigos)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:54:24)
-- CODE: 
numerosdeamigos = 20
custoporamaigos = 35
prin(numerosdeamigos * custoporamaigos) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos) 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos) 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 21:44:46)
-- CODE: 
numerosdeamigos = 20
custoporamaigos = 35
prin(numerosdeamigos * custoporamaigos)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin(numerosdeamigos * custoporamaigos)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 21:13:18)
-- CODE: 
amigos = 20
amigo = *35
prin(amigos * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    amigo = *35
            ^^^
SyntaxError: can't use starred expression here
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    amigo = *35
            ^^^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 21:10:46)
-- CODE: 
amigos = 20
amigo = 35
prin( amigo * amigo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigo * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prin( amigo * amigo)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 22:07:05)
-- CODE: 
amigos = 20
valorporamigos = 35

print(amigos * valor_por_amigos)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(amigos * valor_por_amigos)
                   ^^^^^^^^^^^^^^^^
NameError: name 'valor_por_amigos' is not defined. Did you mean: 'valorporamigos'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(amigos * valor_por_amigos)
                   ^^^^^^^^^^^^^^^^
NameError: name 'valor_por_amigos' is not defined. Did you mean: 'valorporamigos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
